new module added - body size; the new module also affect physical activity

--- a/config.ini
+++ b/config.ini
@@ -13,3 +13,4 @@ deprivation = input/nz/demographic/nz_deprivation.csv
 # lifestyle and disease moduled for NZ
 smoking = input/nz/lifestyle/smoking.csv
 physical_activity = input/nz/lifestyle/physical_activity.csv
+body_size = input/nz/lifestyle/body_size.csv
