--- a/config.ini
+++ b/config.ini
@@ -14,3 +14,4 @@ deprivation = input/nz/demographic/nz_deprivation.csv
 smoking = input/nz/lifestyle/smoking.csv
 physical_activity = input/nz/lifestyle/physical_activity.csv
 body_size = input/nz/lifestyle/body_size.csv
+diabetes_1 = input/nz/lifestyle/diabetes_1.csv
