diabetes type 2 module added

--- a/config.ini
+++ b/config.ini
@@ -15,3 +15,4 @@ smoking = input/nz/lifestyle/smoking.csv
 physical_activity = input/nz/lifestyle/physical_activity.csv
 body_size = input/nz/lifestyle/body_size.csv
 diabetes_1 = input/nz/lifestyle/diabetes_1.csv
+diabetes_2 = input/nz/lifestyle/diabetes_2.csv
