all file names in lower case

--- a/config.ini
+++ b/config.ini
@@ -17,4 +17,4 @@ body_size = input/nz/lifestyle/body_size.csv
 # disease modules for NZ
 diabetes_1 = input/nz/disease/diabetes_1.csv
 diabetes_2 = input/nz/disease/diabetes_2.csv
-cvd = input/nz/disease/CVD.csv
+cvd = input/nz/disease/cvd.csv
