added a template disease for demonstration purposes

--- a/config.ini
+++ b/config.ini
@@ -18,3 +18,5 @@ body_size = input/nz/lifestyle/body_size.csv
 diabetes_1 = input/nz/disease/diabetes_1.csv
 diabetes_2 = input/nz/disease/diabetes_2.csv
 cvd = input/nz/disease/cvd.csv
+# example CSV template file
+#disease_a = input/nz/disease/disease_a.csv
